--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ exclude_generator:
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type: github
+  type: git
   #repository: https://gitcafe.com/Sid/Sid.git
   repository: git@gitcafe.com:Sid/Sid.git
   branch: gitcafe-pages
