--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "version": "3.0.1"
   },
   "dependencies": {
-    "hexo": "^3.0.0",
+    "hexo": "latest",
     "hexo-generator-archive": "^0.1.0",
     "hexo-generator-category": "^0.1.0",
     "hexo-generator-index": "^0.1.0",
