--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
-relative_link: true
+relative_link: false
 highlight:
   enable: true
   line_number: true
@@ -111,17 +111,8 @@ since: 2010
 feed:
   type: atom
   path: atom.xml
-<<<<<<< HEAD
 
 archive_generator:
   per_page: 1000
   yearly: true
   monthly: false
-=======
-  limit: 20
-
-archive_generator:
-  per_page: 20
-  yearly: true
-  monthly: true
->>>>>>> 53bc5d7f4df81d5660bf81065799ea92c1082f81
