add menu 'works'

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: 不可能不确定
 subtitle: A Node.js Developer
 description: 不可能不确定的博主是一名Node.js程序员，博客的内容会涉及电影 / 生活 / 吐槽 / JavaScript / PHP / Node.js / Express / MongoDB / MySQL / Redis / AngularJS / jQuery / HTML。
-author: Sid
+author: Stiekel
 email: histkc@gmail.com
 language: zh-Hans
 
