add segmentfault id

--- a/_config.yml
+++ b/_config.yml
@@ -113,6 +113,7 @@ social:
   Twitter: https://twitter.com/SidCN
   Weibo: http://weibo.com/sidcn
   DouBan: http://www.douban.com/people/Stiekel/
+  segmentfault: https://segmentfault.com/u/sid
 
 menu:
   首页: index.html
