--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "s": "./node_modules/hexo/bin/hexo s",
+    "c": "./node_modules/hexo/bin/hexo clean",
+    "d": "./node_modules/hexo/bin/hexo d"
+  },
   "hexo": {
     "version": "3.3.1"
   },
