--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 不可能不确定
-subtitle: A JavaScript Developer
-description: 不可能不确定的博主是一名 JavaScript 程序员。
+subtitle: A Developer
+description: 不可能不确定的博主是一名程序员。
 author: Stiekel
 email: histkc@gmail.com
 language: zh-CN
