--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "s": "./node_modules/hexo/bin/hexo s",
     "c": "./node_modules/hexo/bin/hexo clean",
+    "g": "./node_modules/hexo/bin/hexo g",
     "d": "./node_modules/hexo/bin/hexo d"
   },
   "hexo": {
-    "version": "3.3.7"
+    "version": "4.2.0"
   },
   "dependencies": {
     "hexo": "latest",
