--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ language: zh-CN
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://nskip.com
+url: https://nskip.com
 root: /
 permalink: :year-:month/:title.html
 tag_dir: tags
