--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "s": "./node_modules/hexo/bin/hexo s",
     "c": "./node_modules/hexo/bin/hexo clean",
     "g": "./node_modules/hexo/bin/hexo g",
-    "G": "rm -rf themes/random && git clone https://github.com/stiekel/hexo-theme-random.git --depth=1 themes/random && npm run g",
+    "G": "rm -rf themes/random && git clone https://github.com/stiekel/hexo-theme-random.git --depth=1 themes/random && mv theme_config.yml themes/random/_config.yml && npm run g",
     "d": "./node_modules/hexo/bin/hexo d"
   },
   "hexo": {
-    "version": "5.4.0"
+    "version": "5.4.2"
   },
   "dependencies": {
     "hexo": "^5.0.0",
